loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:1: error: value === is not a member of Boolean
while (estSurBlanc()===False){avance} 
                    ^LoopDoWhile:1: error: not found: value False
while (estSurBlanc()===False){avance} 
                       ^